@@ -1,6 +1,8 @@
 2008-04-01  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Storing certificate fingerprints in cache_dir
+	* Writing a file called url_string in the account's cache dir, to make
+	it more easy for searchers and meta indexers to identify this account
 
 2008-03-31  Philip Van Hoof <pvanhoof@gnome.org>
 
